# rca-1802-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  rca-1802-emulator-74e138fc926d8c90_bg.wasm
.github/workflows/: pages.yml
components/: Cargo.toml
components/src/: lib.rs
docs/: ai_agent_instructions.md  porting.md
pages/: index.html  rca-1802-emulator-564137c7ff81d77a.js  rca-1802-emulator-564137c7ff81d77a_bg.wasm
src/: app.rs  assembler.rs  lib.rs  wasm.rs
src/cpu/: executor.rs  instruction.rs  mod.rs  state.rs
styles/: layout.css
