[workspace]
members = [".", "components"]
resolver = "2"

[package]
name = "rca-1802-emulator"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
description = "RCA COSMAC 1802 Assembly Emulator - Interactive browser-based educational game"
license = "MIT"
repository = "https://github.com/sw-comp-history/rca-1802-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
components = { path = "./components" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
gloo = "0.11"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
thiserror = "2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
